<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.unsplashattestationproject.presentation.bottom_navigation.photo_list.PhotoListFragment"
        android:label="@string/activity_bottom_nav_title_photos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.unsplashattestationproject.presentation.bottom_navigation.collections_list.CollectionsFragment"
        android:label="@string/activity_bottom_nav_title_collections"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.unsplashattestationproject.presentation.bottom_navigation.user_profile.UserProfileFragment"
        android:label="@string/activity_bottom_nav_title_user_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>